--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Buddy",
   "license": "ISC",
   "dependencies": {
+    "@graphile-contrib/pg-simplify-inflector": "^6.1.0",
     "db-migrate": "^0.11.13",
     "db-migrate-pg": "^1.2.2",
     "postgraphile": "^4.12.9"
