--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@graphile-contrib/pg-simplify-inflector": "^6.1.0",
     "db-migrate": "^0.11.13",
     "db-migrate-pg": "^1.2.2",
-    "postgraphile": "^4.12.9"
+    "postgraphile": "^4.12.9",
+    "postgraphile-plugin-connection-filter": "^2.2.2"
   }
 }
